# whatsapp-mcp

./: DEPLOYMENT.md  Dockerfile  docker-compose.yml  docker-entrypoint.sh
n8n-workflows/: README.md  whatsapp-ai-assistant.json  whatsapp-auto-reply.json  whatsapp-crm-sync.json
whatsapp-bridge/: main.go
whatsapp-mcp-server/: http_server.py  pyproject.toml
